--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,5 @@
 name: Deploy Vite to GitHub Pages
+
 on:
   push:
     branches: [ main ]
@@ -10,7 +11,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: true
 
 jobs:
@@ -19,18 +20,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
+
       - name: Install deps (clean)
         run: npm ci
+
       - name: Build with repo base
         env:
           GITHUB_PAGES: "true"
           REPO_NAME: "${{ github.event.repository.name }}"
         run: npm run build
-      - name: Upload artifact
+
+      - name: Upload artifact (dist)
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
